--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tu Historia Preferida - Historias de Audio para Toda la Familia</title>
+    <title>Historia Preferida - Historias de Audio para Toda la Familia</title>
     <meta name="description" content="Más de 900 historias de audio dramatizadas en español, inglés y ruso. Contenido bíblico y de valores para niños y familias desde 1985.">
     
-    <meta property="og:title" content="Tu Historia Preferida - Historias de Audio para Toda la Familia">
+    <meta property="og:title" content="Historia Preferida - Historias de Audio para Toda la Familia">
     <meta property="og:description" content="Más de 900 historias dramatizadas que enseñan valores bíblicos y forman el carácter de tus hijos.">
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://historiapreferida.com">
@@ -20,7 +20,7 @@
     
     <style>
         :root {
-            /* Colores oficiales de Tu Historia Preferida */
+            /* Colores oficiales de Historia Preferida */
             --primary: #E94057;
             --primary-dark: #d63850;
             --primary-light: #ff6b7f;
@@ -964,13 +964,13 @@
             <div class="footer-links">
                 <h4>Contacto</h4>
                 <ul>
-                    <li><a href="mailto:info@tuhistoriapreferida.com">info@tuhistoriapreferida.com</a></li>
-                    <li><a href="https://www.tuhistoriapreferida.com">tuhistoriapreferida.com</a></li>
+                    <li><a href="mailto:info@historiapreferida.com">info@historiapreferida.com</a></li>
+                    <li><a href="https://historiapreferida.com">historiapreferida.com</a></li>
                 </ul>
             </div>
         </div>
         <div class="footer-bottom">
-            <p>© 2025 Tu Historia Preferida. Todos los derechos reservados.</p>
+            <p>© 2025 Historia Preferida. Todos los derechos reservados.</p>
             <div class="social-links">
                 <a href="#" aria-label="Facebook">f</a>
                 <a href="#" aria-label="YouTube">▶</a>
